--- a/style.css
+++ b/style.css
@@ -8,18 +8,32 @@
 .banner {
   background-color: black;
   position: fixed;
+  top:0;
   width: 100%;
+  height: 3.13rem;
+  z-index: 10;
 }
 
 .banner .image-container {
   display: inline-block;
+  width: auto;
+  height: 62px;
+  padding-left: 0.45rem;
+}
+
+.banner .image-container img {
+  max-height: 100%;
 }
 
 nav {
   display: inline-block;
-  vertical-align: middle;
+}
+
+nav ul {
+  padding: 0;
 }
 
 nav li {
   display: inline;
+  padding: 1rem;
 }
