--- a/style.css
+++ b/style.css
@@ -10,30 +10,36 @@
   position: fixed;
   top:0;
   width: 100%;
-  height: 3.13rem;
   z-index: 10;
+  height: 3.13rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .banner .image-container {
-  display: inline-block;
   width: auto;
-  height: 62px;
+  height: 100%;
   padding-left: 0.45rem;
+  align-self: center;
+  position: relative;
+  top: 0.43rem;
 }
 
 .banner .image-container img {
-  max-height: 100%;
+  max-height: 72%;
 }
 
 nav {
-  display: inline-block;
+
 }
 
 nav ul {
-  padding: 0;
+
 }
 
 nav li {
   display: inline;
   padding: 1rem;
+  text-decoration: underline;
 }
