--- a/style.css
+++ b/style.css
@@ -51,17 +51,15 @@ h5 {
   top: 0.43rem;
 }
 
+@media only screen and (max-width: 650px) {
+  .banner .image-container {
+    display: none;
+  }
+}
+
 .banner .image-container img {
   max-height: 72%;
   width: auto;
-}
-
-nav {
-
-}
-
-nav ul {
-
 }
 
 nav li {
@@ -69,6 +67,13 @@ nav li {
   padding: 1rem;
   text-decoration: underline;
 }
+
+@media only screen and (max-width: 650px) {
+  nav {
+    align-self: center;
+  }
+}
+
 
 .main {
   background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg');
@@ -147,6 +152,8 @@ nav li {
   display: flex;
   justify-content: space-around;
   padding-top: 2rem;
+
+  hight: 100%;
 }
 
 .location-box {
@@ -157,6 +164,29 @@ nav li {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+@media only screen and (max-width: 650px) {
+  .location .title {
+    padding: 1rem;
+  }
+
+  .location-boxes {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    padding-top: 0rem;
+  }
+
+  .location-box {
+    width: auto;
+    height: auto;
+    line-height: 1;
+
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .contact h2 {
